--- a/frontend/src/app/component/todo-listing/todo-listing.component.html
+++ b/frontend/src/app/component/todo-listing/todo-listing.component.html
@@ -1,1 +1,10 @@
-<p>todo-listing works!</p>
+<mat-card class="mdc-card">
+    <mat-card-header>
+      <div class="header-content">
+        <h1>To do List</h1>
+        <button (click)="FunctionAdd()" mat-raised-button color="primary">Add Task (+)</button>
+      </div>
+    </mat-card-header>
+    <mat-card-content>
+    </mat-card-content>
+  </mat-card>
