--- a/frontend/src/app/component/todo-listing/todo-listing.component.html
+++ b/frontend/src/app/component/todo-listing/todo-listing.component.html
@@ -6,5 +6,10 @@
       </div>
     </mat-card-header>
     <mat-card-content>
+        <table mat-table [dataSource]="TodoList" class="mat-elevation-z8">
+            <ng-
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row:column:displayedColumns"></tr>
+        </table>
     </mat-card-content>
   </mat-card>
