--- a/frontend/src/app/component/todo-listing/todo-listing.component.html
+++ b/frontend/src/app/component/todo-listing/todo-listing.component.html
@@ -1,15 +1,47 @@
 <mat-card class="mdc-card">
-    <mat-card-header>
-      <div class="header-content">
-        <h1>To do List</h1>
-        <button (click)="FunctionAdd()" mat-raised-button color="primary">Add Task (+)</button>
-      </div>
-    </mat-card-header>
-    <mat-card-content>
-        <table mat-table [dataSource]="TodoList" class="mat-elevation-z8">
-            <ng-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row:column:displayedColumns"></tr>
-        </table>
-    </mat-card-content>
-  </mat-card>
+  <mat-card-header>
+    <div class="header-content">
+      <h1>To do List</h1>
+      <button (click)="FunctionAdd()" mat-raised-button color="primary">
+        Add Task (+)
+      </button>
+    </div>
+  </mat-card-header>
+  <mat-card-content>
+    <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-sort-header mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      </ng-container>
+      <ng-container matColumnDef="title">
+        <th mat-sort-header mat-header-cell *matHeaderCellDef>Title</th>
+        <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+      </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-sort-header mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      </ng-container>
+      <ng-container matColumnDef="dueDate">
+        <th mat-sort-header mat-header-cell *matHeaderCellDef>Due Date</th>
+        <td mat-cell *matCellDef="let element">{{ element.dueDate | isoDate }}</td>
+      </ng-container>
+      <ng-container matColumnDef="isCompleted">
+        <th mat-sort-header mat-header-cell *matHeaderCellDef>Completed</th>
+        <td mat-cell *matCellDef="let element">{{ element.isCompleted ? "Yes" : "No" }}</td>
+      </ng-container>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-raised-button color="primary">Edit</button>
+          <button mat-raised-button color="accent">Delete</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </mat-card-content>
+  <mat-card-footer>
+    <mat-paginator [pageSizeOptions]="[5,10,50]" showFirstLastButtons></mat-paginator>
+  </mat-card-footer>
+</mat-card>
