feat(client): add edit and delete

--- a/frontend/src/app/component/todo-form/todo-form.component.html
+++ b/frontend/src/app/component/todo-form/todo-form.component.html
@@ -22,8 +22,8 @@
           <mat-slide-toggle class="mat-50" formControlName="isCompleted">Is Completed?</mat-slide-toggle>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-raised-button color="primary" type="submit">Create</button>
-        <button (click)="ClosePopup()" mat-raised-button color="accent">Close</button>
+        <button mat-raised-button color="primary" type="submit">Save</button>
+        <a (click)="ClosePopup()" mat-raised-button color="accent">Close</a>
     </mat-card-actions>
 </mat-card>
 </form>
