--- a/frontend/src/app/component/todo-listing/todo-listing.component.html
+++ b/frontend/src/app/component/todo-listing/todo-listing.component.html
@@ -3,11 +3,12 @@
     <div class="header-content">
       <h1>To do List</h1>
       <button (click)="FunctionAdd()" mat-raised-button color="primary">
-        Add Task (+)
+        <mat-icon>add_circle_outline</mat-icon>
+        Add Task
       </button>
     </div>
-  </mat-card-header>
-  <mat-card-content>
+</mat-card-header>
+  <mat-card-content class="table-content">
     <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <th mat-sort-header mat-header-cell *matHeaderCellDef>Id</th>
@@ -30,15 +31,23 @@
         <td mat-cell *matCellDef="let element">{{ element.isCompleted ? "Yes" : "No" }}</td>
       </ng-container>
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
-          <button mat-raised-button color="primary">Edit</button>
-          <button mat-raised-button color="accent">Delete</button>
+          <button (click)="FunctionEdit(element.id)" mat-raised-button color="primary">Edit</button>
+          <button (click)="FunctionDelete(element.id)" mat-raised-button color="accent">Delete</button>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <tr class="mat-row" *matNoDataRow="">
+        <td class="mat-cell" [attr.colspan]="displayedColumns.length">
+            <div class="message-no-data">
+                <mat-icon class="mx-3">error</mat-icon> There's no data to show.
+            </div>
+        </td>
+    </tr>
     </table>
   </mat-card-content>
   <mat-card-footer>
